--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "build": "cross-env NODE_ENV=production node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "element-ui": "^2.13.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "qs": "^6.9.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
@@ -47,7 +48,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
