--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "element-ui": "^2.13.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
     "qs": "^6.9.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
