--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.2",
     "jszip": "^3.5.0",
     "qs": "^6.9.4",
+    "v-viewer": "^1.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
